--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ ul {
 }
 
 .sidebar {
-    height: 480px;
+    height: 540px;
     width: 720px;
     border: 2px solid #eeeeee;
     border-radius: 18px;
@@ -129,8 +129,29 @@ ul {
     float: right;
 }
 
+#left-sidebar ul li {
+    padding: 6px 0 6px 18px;
+    list-style-image: url(images/arrow.png);
+}
+
+#right-sidebar ul li {
+    padding: 6px 0 6px 36px;
+    background: url(images/tick.png) no-repeat left center;
+}
+
 .sidebar ul li a {
     text-decoration: none;
     font-size: 18px;
     color: #FF1D58;
+    -webkit-transition: font-size 0.5s ease;
+    -moz-transition: font-size 0.5s ease;
+    -o-transition: font-size 0.5s ease;
+    -ms-transition: font-size 0.5s ease;
+    transition: font-size 0.5s ease;
+}
+
+.sidebar ul li a:hover, .sidebar ul li a.active {
+    text-decoration: none;
+    font-size: larger;
+    font-weight: bold;
 }
